# Normal3Dof

./: .gitignore  CMakeLists.txt  test_3dofalgo.cpp
compilefilter/: CMakeLists.txt  improve_mahony.cpp  improve_mahony.h  mahony.cpp  mahony.h
include/: common_math_tools.h  data_basic.h
